dashboards/unifi-controller/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: unifi-controller
    app.kubernetes.io/name: service
    app.kubernetes.io/part-of: dashboard
  name: unifi-controller
spec:
  ports:
  - name: https
    port: 8443
    targetPort: https
  selector:
    app.kubernetes.io/component: unifi-controller
    app.kubernetes.io/name: unifi-controller
    app.kubernetes.io/part-of: dashboard
  type: ClusterIP
