dashboards/unifi-controller/ingresses.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: https
  labels:
    app.kubernetes.io/component: unifi-controller
    app.kubernetes.io/name: ingress
    app.kubernetes.io/part-of: dashboard
  name: unifi-controller
spec:
  ingressClassName: ingress-nginx
  rules:
  - host: unifi.progamesigner.dev
    http:
      paths:
      - backend:
          service:
            name: unifi-controller
            port:
              name: https
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - unifi.progamesigner.dev
    secretName: tls-dev-progamesigner
